--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,34 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.EmailForm {
+  padding: 15px;
+}
+
+.AutoCompleteInput {
+  position: relative;
+}
+
+.AutoCompleteInput .results {
+  background: white;
+  border: 1px solid black;
+  height: 200px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  overflow: scroll;
+  width: 100%;
+  z-index: 2;
+}
+
+.AutoCompleteInput .results li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.AutoCompleteInput .results li.selected {
+  background: blue;
+  color: white;
+}
